--- a/Views/Posts/SearchIndex.cshtml
+++ b/Views/Posts/SearchIndex.cshtml
@@ -17,8 +17,8 @@
             <div class="row">
                 @foreach (var post in Model.OrderByDescending(c => c.Created))
                 {
-                    <div class="col-lg-6 mx-auto">
-                        <div class="card mt-2 h-100">
+                    <div class="col-lg-6 mx-auto  mb-4">
+                        <div class="card mt-2 h-100 shadow">
                             <div class="card-body">
                                 <div>
                                     <a asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">
