--- a/Views/Posts/BlogPostIndex.cshtml
+++ b/Views/Posts/BlogPostIndex.cshtml
@@ -53,7 +53,7 @@
                     <form asp-action="SearchIndex" asp-controller="Posts">
                         <div class="input-group">
                             <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                            <button class="btn-sm btn-primary btn-block Oz" id="button-search" type="submit">Search</button>
+                            <button class="btn-sm btn-secondary btn-block Oz" id="button-search" type="submit">Search</button>
                         </div>
                     </form>
                 </div>
