--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             </div>
         </nav>
         <!-- page header-->
-        <header class="masthead" style="background-image: url('../../img/parchment_1.jpg')">
+        <header class="masthead" style="background-image: url('/img/parchment_1.jpg')">
             <div class="overlay"></div>
 
             <div class="container">
