--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <!-- main content-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-8">
+        <div class="col-lg-8 col-md-10">
             <div class="card shadow">
                 <h2 class="card-header">Latest Post</h2>
                 <div class="card-body">
