Updated vanity url for linked-in

--- a/Views/Posts/SearchIndex.cshtml
+++ b/Views/Posts/SearchIndex.cshtml
@@ -70,7 +70,7 @@
                     Let's grab a coffee and chat! (in person or on Zoom).
                     <br />
                     <br />
-                    Connect with me on <a href="https://github.com/Piaomu" target="_blank"><span class="text-info">Github,</span> </a> <a href="https://www.linkedin.com/in/kasey-wahl-24073084/" target="_blank"><span class="text-info">LinkedIn</span></a>, <a href="https://twitter.com/KaseyWahl8" target="_blank"><span class="text-info">Twitter</span></a>, or my personal website, <a href="https://kaseywahl.io/" target="_blank"> <span class="text-info">kaseywahl.io</span></a>.
+                    Connect with me on <a href="https://github.com/Piaomu" target="_blank"><span class="text-info">Github,</span> </a> <a href="https://www.linkedin.com/in/kasey-wahl/" target="_blank"><span class="text-info">LinkedIn</span></a>, <a href="https://twitter.com/KaseyWahl8" target="_blank"><span class="text-info">Twitter</span></a>, or my personal website, <a href="https://kaseywahl.io/" target="_blank"> <span class="text-info">kaseywahl.io</span></a>.
                 </div>
             </div>
         </div>
