--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                                 <a class="nav-link text-dark Oz" asp-area="" asp-controller="Posts" asp-action="Create">Create Post</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark Oz" asp-area="" asp-controller="swagger" asp-action="Index">API</a>
+                        </li>
 
                     </ul>
                     <partial name="_LoginPartial" />
