Added Viewcount to Posts and Db Migration 10

--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -32,6 +32,7 @@
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Delete" asp-route-id="@Model.Post.Id">Delete</a>
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Create" asp-route-id="@Model.Post.Id">Create New</a>
                             <a class="badge bg-info text-decoration-none link-light" asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@Model.Post.BlogId">See All</a>
+                            <p>Views: @Model.Post.Views.Count</p>
                         }
                     </div>
 
