--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
         <link href="~/css/styles.css" rel="stylesheet" />
         <link href="~/css/summernote-bs4.css" rel="stylesheet" />
         <link href="~/css/CustomStyle.css" rel="stylesheet" />
+        <script data-ad-client="ca-pub-1305147802397188" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     </head>
     <body>
